syntax = "proto3";

package cardapio;

message Cardapio {
    string item = 1;
    float preco = 2;
}

message ImprimeCardapio {
    repeated Cardapio cardapio = 1;
}

message Posicao {
    int32 posicao = 1;
}

message Vazio { }


service ServicoCardapio {
    rpc ListarItens (Vazio) returns (ImprimeCardapio);
    rpc ConsultarItem (Posicao) returns (Cardapio);
    rpc CadastrarItem (Cardapio) returns (Vazio);
    rpc ExcluirItem (Posicao) returns (Vazio);

    rpc RealizarPedido (Posicao) returns (Vazio);
    rpc ListarPedidos (Posicao) returns (Cardapio);
    rpc ExcluirPedido (Posicao) returns (Vazio);
    rpc FinalizarCompra (Vazio) returns (Vazio);

    rpc Cancelar (Vazio) returns (Vazio);
}